change map.of to Collections calls